--- a/bin/config.yaml
+++ b/bin/config.yaml
@@ -16,20 +16,20 @@ ref:
 shared_snakemake_repo: "/secondary/projects/bbc/research/shared_snakemake/"
 
 modules:
-  bamtools: bbc/bamtools/bamtools-2.5.1
-  bcftools: bbc/bcftools/bcftools-1.12 
-  bedops: bbc/bedops/bedops-2.4.37
-  bedtools: bbc/bedtools/bedtools-2.29.2
-  bwa: bbc/bwa/bwa-0.7.17
-  fastqc: bbc/fastqc/fastqc-0.11.9
-  fastq_screen: bbc/fastq_screen/fastq_screen-0.14.0
-  gatk: bbc/gatk/gatk-4.1.8.1
-  multiqc: bbc/multiqc/multiqc-1.9
-  picard: bbc/picard/picard-2.23.3
-  qualimap: bbc/qualimap/qualimap_v.2.2.2
-  R: bbc/R/R-4.1.0-setR_LIBS_USER
-  samblaster: bbc/samblaster/samblaster-0.1.24
-  samtools: bbc/samtools/samtools-1.9
-  snpEff: bbc/SnpEff/SnpEff-4.3t
-  trim_galore: bbc/trim_galore/trim_galore-0.6.0
-  vt: bbc/vt/vt-0.1.16
+  bamtools: bbc2/bamtools/bamtools-2.5.2
+  bcftools: bbc2/bcftools/bcftools-1.17
+  bedops: bbc2/bedops/bedops-2.4.41
+  bedtools: bbc2/bedtools/bedtools-2.30.0
+  bwa: bbc2/bwa/bwa-0.7.17
+  fastqc: bbc2/fastqc/fastqc-0.12.1
+  fastq_screen: bbc2/fastq_screen/fastq_screen-0.14.0
+  gatk: bbc2/gatk/gatk-4.1.8.1
+  multiqc: bbc2/multiqc/multiqc-1.14
+  picard: bbc2/picard/picard-2.27.5
+  qualimap: bbc2/qualimap/qualimap_v.2.2.2
+  R: bbc2/R/alt/R-4.2.1-setR_LIBS_USER
+  samblaster: bbc2/samblaster/samblaster-0.1.26
+  samtools: bbc2/samtools/samtools-1.17
+  snpEff: bbc2/SnpEff/SnpEff-5.1
+  trim_galore: bbc2/trim_galore/trim_galore-0.6.0
+  vt: bbc2/vt/vt-0.1.16
